AS has achievements now

--- a/tct/static/mods/2024AS_init.html
+++ b/tct/static/mods/2024AS_init.html
@@ -51,7 +51,7 @@ campaignTrail_temp.temp_election_list = [
     }
 ]
 
-campaignTrail_temp.credits = "Kirb_on_Mobius, with Jet's Code 1 and Code 2 tools"
+campaignTrail_temp.credits = "Kirb_on_Mobius, with Jet's Code 1 and Code 2 tools. Thanks to Naimina OS and RTKH for helping with the Achievements. Credit to DecStar for the Music Player."
 
 campaignTrail_temp.candidate_json = [
     {
@@ -323,5 +323,60 @@ document.getElementById("header").src = "https://external-content.duckduckgo.com
 document.body.background = "https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.thegoodhartgroup.com%2Fwp-content%2Fuploads%2F2018%2F03%2Fbigstock-Washington-Dc-By-Night-4142125.jpg&f=1&nofb=1&ipt=5ec5b6f073c25ed292381673bcd51640ca531a7bc73502ee06844bab683c58cb&ipo=images";
 
 document.head.innerHTML += "<style>#results_container {color:#000000;} .inner_window_w_desc {background-color:#853d5c!important;}</style>";
+
+campaignTrail_temp.achievements = {
+  "Pulled Away from the Abyss" : {
+      "image" : "https://imgur.com/O3F40QS.png",
+      "description" : "Prevent the Rage from reaching majority.",
+      "cannotBeCheated" : true
+  },
+  "Donald's Inferno" : {
+      "image" : "https://imgur.com/vyivOU6.png",
+      "description" : "Let the Red Rage consume America.",
+      "cannotBeCheated" : true
+  },
+  "Kamala's Firestorm" : {
+    "image" : "https://imgur.com/q2GgTof.png",
+    "description" : "Let the Blue Rage consume America.",
+    "cannotBeCheated" : true
+  },
+"E pluribus unum" : {
+  "image" : "https://imgur.com/p1Z2zql.png",
+  "description" : "Win as the American Spirit",
+  "cannotBeCheated" : false
+},
+"HOPEMAXXING" : {
+  "image" : "https://imgur.com/knpXOUp.png",
+  "description" : "Win every EC as the American Spirit.",
+  "cannotBeCheated" : false
+},
+"Family Reunion" : {
+  "image" : "https://imgur.com/g3PlDTo.png",
+  "description" : "Pay respect to your father.",
+  "cannotBeCheated" : true
+},
+"IT HAPPENED AGAIN" : {
+  "image" : "https://imgur.com/V7rOODx.png",
+  "description" : "get le funny numbers.",
+  "cannotBeCheated" : true
+},
+"Art Imitates Life" : {
+  "image" : "https://imgur.com/Zs6JmmI.png",
+  "description" : "Recreate the actual 2024 Election results.",
+  "cannotBeCheated" : true
+},
+"National Equilibrium" : {
+  "image" : "https://imgur.com/GhoO2Vv.png",
+  "description" : "Deadlock the election with 269-269.",
+  "cannotBeCheated" : true
+},
+"Civilized Debate" : {
+  "image" : "https://imgur.com/LSrvRAW.png",
+  "description" : "Keep the peace during the Trump-Harris debate.",
+  "cannotBeCheated" : true
+
+}
+
+}
 
 //#endcode
