we need wallace, wallace for president

--- a/tct/static/mods/MODLOADERFILE.html
+++ b/tct/static/mods/MODLOADERFILE.html
@@ -1,5 +1,6 @@
 <option data-mode="" data-tags="" value="other">Other</option>
 <option data-mode="" data-tags="Funny" value="0000Random_Mod">Random Scenario</option>
+<option data-mode="" data-tags="Althist" value="1948IW">1948 Identity War (original)</option>
 <option data-mode="" data-tags="Althist" value="1968Elvis">1968Elvis</option>
 <option data-mode="" data-tags="Althist" value="1972Yockey">1972Yockey</option>
 <option data-mode="" data-tags="Historical" value="1992Angola">1992Angola</option>
