--- a/tct/static/mods/21028 CE_300Nine.html
+++ b/tct/static/mods/21028 CE_300Nine.html
@@ -26,7 +26,9 @@ notes = 0;
 worldly_subalignment = 0;
 religious_subalignment = 0;
 question5_phase = 0;
+e.max_answers = 4;
 
+setTimeout(document.getElementById("candidate_id_button").addEventListener("click", onclick), 10);
 
 cyoAdventure = function (a) {
 	/*
@@ -38,9 +40,10 @@ cyoAdventure = function (a) {
 	console.log();
 	*/
 	update_EV_dict()
+	/*
     console.log(max_dict(ev_dict));
 	console.log(max_dict(pop_dict));
-	
+	*/
 	ans = campaignTrail_temp.player_answers[campaignTrail_temp.player_answers.length-1];
 	if (end_the_game == 0) {
 		updateQuestionCount();
@@ -18002,7 +18005,7 @@ function setImage(url) {
 			img.src = url;
 			clearInterval(interval);
 		}
-	}, 50);
+	}, 10);
 }
 
 function set_endtext(string) {
@@ -18179,3 +18182,4 @@ function add_slide(image, slide_content, first, last) {
 	}
 	slides.push([image, slide_content]);
 }
+
