--- a/tct/static/mods/21028 CE_300Nine.html
+++ b/tct/static/mods/21028 CE_300Nine.html
@@ -29,6 +29,7 @@ question5_phase = 0;
 e.max_answers = 4;
 
 cyoAdventure = function (a) {
+	e.max_answers = 4;
 	/*
 	console.log("Worldly Conflict: "+checkstats("worldly_conflict"));
 	console.log("Militarization: "+checkstats("militarization"));
