brought back donation

--- a/tct/campaign-trail/index.html
+++ b/tct/campaign-trail/index.html
@@ -214,8 +214,8 @@
                   <button id="customThemesButton" onclick="toggleModBoxThemes()" style="border-radius:5px; font-weight:bold;padding:10px;">Loading</button>
                   <button id="mobileModeButton" onclick="toggleMobileMode()" style="border-radius:5px; font-weight:bold;padding:10px;">Loading</button>
                   <br><br>
-                  <!-- <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="opentct" data-color="#1cc4a3" data-emoji="🗳️"  data-font="Arial" data-text="Donate to keep us running!" data-outline-color="#000000" data-font-color="#000000" data-coffee-color="#FFDD00" ></script> -->
-                 <!-- <p style="color:#FF6B6B">If you want to donate to a specific mod creator, add their mod's name to the donation and it'll be sent to them, no questions asked!</p> -->
+                  <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="opentct" data-color="#1cc4a3" data-emoji="🗳️"  data-font="Arial" data-text="Donate to keep us running!" data-outline-color="#000000" data-font-color="#000000" data-coffee-color="#FFDD00" ></script>
+                 <p style="color:#FF6B6B">If you want to donate to a specific mod creator, add their mod's name to the donation and it'll be sent to them, no questions asked!</p>
                 </div>
               </div>
             </div>
