--- a/tct/static/mods/MODLOADERFILE.html
+++ b/tct/static/mods/MODLOADERFILE.html
@@ -4,7 +4,7 @@
 <option data-mode="" data-tags="Althist" value="1968Elvis">1968Elvis</option>
 <option data-mode="" data-tags="Althist" value="1972Yockey">1972Yockey</option>
 <option data-mode="" data-tags="Historical" value="1992Angola">1992Angola</option>
-<option data-mode="" data-tags="Althist" value="2008ViceDemo">2008Vice (Demo)</option>
+<option data-mode="" data-tags="Althist" value="2008Vice">𝖛𝖎𝖈𝖊.</option>
 <option data-mode="" data-tags="Althist" value="2022JAIR">2022JAIR</option>
 <option data-mode="" data-tags="Althist" value="2032SwanSong">2032 Swan Song</option>
 <option data-mode="" data-tags="Althist" value="2044CoD">2044: Children of Dusk</option>
