--- a/tct/static/mods/2008 - 𝖛𝖎𝖈𝖊._12240Cheney's Heart.html
+++ b/tct/static/mods/2008 - 𝖛𝖎𝖈𝖊._12240Cheney's Heart.html
@@ -1002,7 +1002,7 @@ vpTable = {
 
     "Jane Fonda" : "Barbara Boxer",
     "Mike Gravel" : "Brian Schweitzer",
-    "Barack Obama" : "Joe Biden",
+    "Barack H. Obama" : "Joe Biden",
     "Joe Lieberman" : "Tom Carper",
     "George McGovern" : "Jesse Jackson Jr.",
     "Mary Landrieu" : "Joe Manchin",
