--- a/tct/static/mods/2008 - 𝖛𝖎𝖈𝖊._12240Cheney's Heart.html
+++ b/tct/static/mods/2008 - 𝖛𝖎𝖈𝖊._12240Cheney's Heart.html
@@ -589,6 +589,9 @@ cyoAdventure = function (a) {
         warCount += 1;
         console.log("warCount" + warCount);
     }
+    if(ans == 12695 || ans == 12700 || ans == 12704){
+        campaignTrail_temp.questions_json[8] = tunnel(12651);
+    }
     if(ans == 12615){
         campaignTrail_temp.questions_json[7] = tunnel(12628);
     }
