--- a/tct/static/mods/2008 - 𝖛𝖎𝖈𝖊._12240Cheney's Heart.html
+++ b/tct/static/mods/2008 - 𝖛𝖎𝖈𝖊._12240Cheney's Heart.html
@@ -23828,7 +23828,7 @@ slide_dict = {
     𝖛𝖎𝖈𝖊. Credits:<br>
     LEAD CODER: Galen/RTKH<br>
     LEAD GFX DESIGN: Galen/RTKH<br>
-    WRITING TEAM:  Krypto, Charlie, Everynametaken, Mrtidepod, Big D<br>
+    WRITING TEAM:  Krypto, Charlie, Octosteel, Everynametaken, Mrtidepod, Big D<br>
     SPECIAL THANKS, APPRECIATION AND ADDITIONAL CREDITS: NaiminaOS, Corsaire, Mr. Rockefeller, SimonJet, LikeHumansDo, and...<br>
     the OpenTCT community for your unrelenting, uncompromising support and love through the months of development.
     </div>
