--- a/tct/static/mods/2008Vice_init.html
+++ b/tct/static/mods/2008Vice_init.html
@@ -31,7 +31,7 @@ campaignTrail_temp.temp_election_list = [
 
 campaignTrail_temp.credits = "<button onclick='credits()'>Richard Bruce Cheney</button>";
   credits = function() {
-    credits = ["LEAD CODER: Galen/RTKH", "LEAD GFX DESIGN: Galen/RTKH", "WRITING TEAM:  Krypto, Charlie, Everynametaken, Mrtidepod, Big D", "SPECIAL THANKS, APPRECIATION AND ADDITIONAL CREDITS: NaiminaOS, Corsaire, Mr. Rockefeller, SimonJet, LikeHumansDo and the OpenTCT community for your unrelenting, uncompromising support and love through the months of development."]
+    credits = ["LEAD CODER: Galen/RTKH", "LEAD GFX DESIGN: Galen/RTKH", "WRITING TEAM:  Krypto, Charlie, Octosteel, Everynametaken, Mrtidepod, Big D", "SPECIAL THANKS, APPRECIATION AND ADDITIONAL CREDITS: NaiminaOS, Corsaire, Mr. Rockefeller, SimonJet, LikeHumansDo and the OpenTCT community for your unrelenting, uncompromising support and love through the months of development."]
     text = ""
     for (i in credits) {
         text += credits[i] + "\n"
