--- a/tct/static/mods/2008 - 𝖛𝖎𝖈𝖊._12240Cheney's Heart.html
+++ b/tct/static/mods/2008 - 𝖛𝖎𝖈𝖊._12240Cheney's Heart.html
@@ -1008,7 +1008,7 @@ vpTable = {
     "Barack H. Obama" : "Joe Biden",
     "Joe Lieberman" : "Tom Carper",
     "George McGovern" : "Jesse Jackson Jr.",
-    "Mary Landrieu" : "Joe Manchin",
+    "Mary Landrieu" : "Ted Strickland",
     "Dennis Kucinich" : "Ron Paul",
     "John Edwards" : "Russ Feingold",
     "Ron Paul" : "Gary Johnson",
