--- a/tct/static/mods/2008Vice_init.html
+++ b/tct/static/mods/2008Vice_init.html
@@ -1052,7 +1052,7 @@ changeObserverVice.observe(gamewindowthingy, initConfigVice);
 
 vpTableHistorical = {
     "Dick Cheney" : "Donald Rumsfeld",
-    "Mary Landrieu" : "Joe Manchin",
+    "Mary Landrieu" : "Ted Strickland",
 }
 HistHexcolour=["#5b6380","#610000"];
 HistName=["Mary Landrieu"," Dick Cheney"];
