--- a/tct/static/mods/1948IW_init.html
+++ b/tct/static/mods/1948IW_init.html
@@ -432,6 +432,8 @@ bannerArr+=1
 document.getElementById("header").src=bannerlist[bannerArr % bannerlist.length]
 }
 document.getElementById("header").src=bannerlist[0]
+
+document.getElementById("header").src = "https://files.catbox.moe/ui3aqq.png"
 footer = $(".footer")[0]
 var button = document.createElement("button") // <button onclick="changeBanner()" style="font-weight: bold; height:19.49px; position: static; right: 770px; top: 0px;">Change banner</button>
 button.style = `font-weight: bold; height:19.49px; position: static; right: 770px; top: 0px;`
