--- a/tct/static/mods/2008 - 𝖛𝖎𝖈𝖊._12240Cheney's Heart.html
+++ b/tct/static/mods/2008 - 𝖛𝖎𝖈𝖊._12240Cheney's Heart.html
@@ -20440,7 +20440,7 @@ campaignTrail_temp.answer_feedback_json = [
         "fields": {
             "answer": 12480,
             "candidate": 12240,
-            "answer_feedback": "Although some worry about your willingness to roll over to Russia's plans, these concerns are dispelled as Powell comes forth to suggest that you're helping \"expand the messsage of Atlanticism\"."
+            "answer_feedback": "Although some worry about your willingness to roll over to Russia's plans, these concerns are dispelled as Rice comes forth to suggest that you're helping \"expand the messsage of Atlanticism\"."
         }
     },
     {
