--- a/tct/static/mods/2008 - 𝖛𝖎𝖈𝖊._12240Cheney's Heart.html
+++ b/tct/static/mods/2008 - 𝖛𝖎𝖈𝖊._12240Cheney's Heart.html
@@ -23961,7 +23961,7 @@ endingPicker = (out, totv, aa, quickstats) => {
     }
     else if(quickstats[0] >= 535 ){
         add_slide(ending_image_dict["fivethirtyfiveimg"],slide_dict["fivethirthyfive"], true, false);
-		//unlockAchievement("The Final Countdown");
+		ctsAchievement("𝖆𝖑𝖑𝖊𝖌𝖗𝖔!");
         const nuclearlandslideEnd = new Playlist();
         const nuclearlandslideEndSong = new Song(
           "The Sacrifice: Sacrificial Dance (The Chosen One)",
