--- a/tct/static/mods/2008 - 𝖛𝖎𝖈𝖊._12240Cheney's Heart.html
+++ b/tct/static/mods/2008 - 𝖛𝖎𝖈𝖊._12240Cheney's Heart.html
@@ -752,7 +752,7 @@ cyoAdventure = function (a) {
     if(demStrengthVarHandler < 1){
         var demStrengthVar = "Nonexistent"
     }
-    else if(demStrengthVarHandler == 1){
+    if(demStrengthVarHandler == 1){
          demStrengthVar = "<strong style='color: DarkSlateGray'>Funereal</strong>"
     }
     else if(demStrengthVarHandler == 2){
