--- a/tct/static/mods/2008 - 𝖛𝖎𝖈𝖊._12240Cheney's Heart.html
+++ b/tct/static/mods/2008 - 𝖛𝖎𝖈𝖊._12240Cheney's Heart.html
@@ -20173,6 +20173,39 @@ campaignTrail_temp.answer_score_state_json = [
     },
     {
         "model": "campaign_trail.answer_score_state",
+        "pk": 130522,
+        "fields": {
+            "answer": 130479,
+            "state": 226,
+            "candidate": 12240,
+            "affected_candidate": 20001,
+            "state_multiplier": -9999
+        }
+    },
+    {
+        "model": "campaign_trail.answer_score_state",
+        "pk": 130523,
+        "fields": {
+            "answer": 130479,
+            "state": 189,
+            "candidate": 12240,
+            "affected_candidate": 20001,
+            "state_multiplier": -9999
+        }
+    },
+    {
+        "model": "campaign_trail.answer_score_state",
+        "pk": 130524,
+        "fields": {
+            "answer": 130479,
+            "state": 183,
+            "candidate": 12240,
+            "affected_candidate": 20001,
+            "state_multiplier": -9999
+        }
+    },
+    {
+        "model": "campaign_trail.answer_score_state",
         "pk": 130249,
         "fields": {
             "answer": 130241,
