removed the grisly abu ghraib picture

--- a/tct/static/mods/2008 - 𝖛𝖎𝖈𝖊._12240Cheney's Heart.html
+++ b/tct/static/mods/2008 - 𝖛𝖎𝖈𝖊._12240Cheney's Heart.html
@@ -24399,7 +24399,7 @@ tooltip_dict = {
      "Khuzestan": "<img src=https://i.ibb.co/pnYZnDC/image.png> Plurality-Arab province in Iran with lots of oil.",
      "OPLAN 8044": "<img src=https://upload.wikimedia.org/wikipedia/commons/f/f4/Julin_Divider.gif> Tick tock.",
      "Prison of Nations": "Another word for archaic Empires.",
-     "Abu Ghraib": "<img src=https://i.ibb.co/QptSh0H/image.png> Girls just wanna have fun!",
+     "Abu Ghraib": "<img src=https://i.ibb.co/ZzxpXJb/image.png> Girls just wanna have fun!",
      "Hamid Karzai": "<img src=https://i.ibb.co/w7P6tFT/image.png> 2 assassination attempts and counting...",
      "Joe Lieberman": "<img src=https://i.ibb.co/5RwCD3h/image.png> Congress Pole.",
      "American soldiers best used elsewhere": "<img src=https://i.ibb.co/Ph4ZZYx/image.png> Blowing up sunshine across the World.",
