i'm so picky mang

--- a/tct/static/mods/2008 - 𝖛𝖎𝖈𝖊._12240Cheney's Heart.html
+++ b/tct/static/mods/2008 - 𝖛𝖎𝖈𝖊._12240Cheney's Heart.html
@@ -3124,7 +3124,7 @@ vpTable = {
         "pk": 12944,
         "fields": {
             "question": 12943,
-            "description": "She's Hanoi Fonda! You can pretend like it's 1969 all you want, but the Republican Party is looking forwards to further flowering the 21st century. These hippies are ultimately representative of a tiny minority of unpatriotic Americans who ultimately stole a primary from rational, effective Democrats, whom we hope to work with to further dismantle this terrible campaign."
+            "description": "She's Hanoi Fonda! You can pretend like it's 1969 all you want, but the Republican Party is looking forwards to further flowering the 21st century. These hippies are representative of a tiny minority of unpatriotic Americans who ultimately stole a primary from rational, effective Democrats, whom we hope to work with to further dismantle this terrible campaign."
         }
     },
     {
