--- a/tct/static/mods/2008 - 𝖛𝖎𝖈𝖊._12240Cheney's Heart.html
+++ b/tct/static/mods/2008 - 𝖛𝖎𝖈𝖊._12240Cheney's Heart.html
@@ -871,7 +871,7 @@ cyoAdventure = function (a) {
         campaignTrail_temp.questions_json[25] = tunnel(129670);
         campaignTrail_temp.questions_json[26] = tunnel(129263);
     }
-    else if(e.noCounter == 15 && (e.vpIndex == 5 || e.vpIndex == 2) && invadedSyria == 1 && payYourBills == 1 && e.player_answers.includes(12751) && !e.player_answers.includes(12664) && cheneyCare == 0){
+    else if(e.noCounter == 15 && invadedSyria == 1 && payYourBills == 1 && e.player_answers.includes(12751) && !e.player_answers.includes(12664) && cheneyCare == 0){
         poorMansKennedy();
         campaignTrail_temp.questions_json[16] = tunnel(129044);
         campaignTrail_temp.questions_json[17] = tunnel(129167);
