fixed the gravel inconsistencies

--- a/tct/static/mods/2008 - 𝖛𝖎𝖈𝖊._12240Cheney's Heart.html
+++ b/tct/static/mods/2008 - 𝖛𝖎𝖈𝖊._12240Cheney's Heart.html
@@ -1683,7 +1683,7 @@ vpTable = {
         "pk": 129042,
         "fields": {
             "priority": 0,
-            "description": "As Mike Gravel takes the stage, there's a moment where he looks almost bewildered to have made it here. And then, his face shifts to steely determination, especially after junior Vermont Senator Bernie Sanders arrives. The former Senator who hasn't ran for office in thirty years takes the podium like an old prairie preacher, having lost none of his touch. \"What the hell are we doing in Iran? What the hell are we doing in Afghanistan?\" He rattles off each nation the US is dying in. \"Cheney must pay for his crimes.\" And the crowd cheers. How will you send this kook back to the unemployment line?",
+            "description": "As Mike Gravel takes the stage, there's a moment where he looks almost bewildered to have made it here. And then, his face shifts to steely determination, especially after Montana's governor, Brian Schweitzer, arrives. The former Senator who hasn't ran for office in thirty years takes the podium like an old prairie preacher, having lost none of his touch. \"What the hell are we doing in Iran? What the hell are we doing in Afghanistan?\" He rattles off each nation the US is dying in. \"Cheney must pay for his crimes.\" And the crowd cheers. How will you send this kook back to the unemployment line?",
             "likelihood": 1
         }
     },
