--- a/tct/static/mods/2008 - 𝖛𝖎𝖈𝖊._12240Cheney's Heart.html
+++ b/tct/static/mods/2008 - 𝖛𝖎𝖈𝖊._12240Cheney's Heart.html
@@ -23921,6 +23921,7 @@ endingPicker = (out, totv, aa, quickstats) => {
     orderID = [aa[0].candidate, aa[1].candidate, aa[2].candidate];
     if(quickstats[0] > 269 && e.vpIndex == 666){
         add_slide(ending_image_dict["jebwinimg"],slide_dict["jeb"], true, false);
+        ctsAchievement("Midnight, The Stars And You");
         const Jeb = new Playlist();
         const JebSong = new Song(
           "By The Seaside",
