--- a/tct/static/mods/2008Vice_init.html
+++ b/tct/static/mods/2008Vice_init.html
@@ -1234,6 +1234,11 @@ campaignTrail_temp.achievements = {
       "description" : "Heart of Darkness",
       "cannotBeCheated" : true
   },
+  "Midnight, The Stars And You" : {
+    "image" : "https://i.imgur.com/1Ht4ITS.png",
+    "description" : "Command through the Divine.",
+    "cannotBeCheated" : true
+},
   "𝖆𝖑𝖑𝖊𝖌𝖗𝖔!" : {
       "image" : "https://i.ibb.co/58WKc8Y/allegro.png",
       "description" : "Achieve perfection.",
